Part 1: Domain (#1)